# notes-system

./: .bandit  .flake8  .isort.cfg  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: linting.yml
apps/notes/: admin.py  models.py  serializers.py  urls.py  views.py
apps/notes/migrations/: 0001_initial.py
apps/tests/: tests_notes.py
apps/tests/tests_http/: auth.http  notes.http
apps/users/: serializers.py  views.py
config/: settings.py  urls.py  yasg.py
